# motor-rs

./: Cargo.toml  Taskfile.yaml
motor-core/: Cargo.toml
motor-core/src/: lib.rs
motor-crypto/: Cargo.toml
motor-crypto/src/: crypto.rs  lib.rs
motor-crypto/tests/: aes_test.rs
motor-mobile/: Cargo.toml  motor.h
motor-mobile/src/: lib.rs
motor-wasm/: Cargo.toml  index.html
motor-wasm/src/: lib.rs
prs/: Cargo.toml
prs/src/: account.rs
src/: application.rs  codec.rs  lib.rs  main.rs
src/application/: motor.rs
src/application/motor/: main.rs
