[package]
name = "motor-abci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "motor-rs"
path = "src/application/motor/main.rs"
required-features = [ "binary", "motor" ]

[features]
default = ["flex-error/std", "flex-error/eyre_tracer"]
motor = []
binary = [
    "structopt",
    "tracing-subscriber/fmt",
]

[dependencies]
bytes = { version = "1.0", default-features = false }
prost = { version = "0.10", default-features = false }
tendermint-proto = { version = "0.23.0-pre.2", default-features = false }
tracing = { version = "0.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
structopt = { version = "0.3", optional = true, default-features = false }
tracing-subscriber = { version = "0.2", optional = true, default-features = false }