[package]
name = "motor-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motor-core = { path = "../motor-core" }
bytes = { version = "1.0", default-features = false }
prost = { version = "0.10", default-features = false }

[build-dependencies]
prost-build = { version = "0.10" }
