[package]
name = "motor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
motor-core = { path = "../motor-core" }
prs = { path = "../prs" }
bytes = { version = "1.0", default-features = false }
prost = { version = "0.10", default-features = false }
wasm-bindgen = "0.2"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"

[build-dependencies]
prost-build = { version = "0.10" }
